<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:id="@+id/tv_start_date"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:layout_marginTop="8dp"
               android:layout_marginBottom="4dp"
               android:gravity="center_horizontal"
               tools:text="Min, 22 November 2018"/>
           <TextView
               android:id="@+id/tv_start_time"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="8dp"
               android:layout_marginRight="8dp"
               android:layout_marginBottom="10dp"
               android:gravity="center_horizontal"
               tools:text="22:00"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal">
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:orientation="vertical">
                   <ImageView
                       android:id="@+id/iv_home_team_icon"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       tools:src="@drawable/ic_launcher_background"/>
                   <TextView
                       android:id="@+id/tv_home_team_name"
                       android:textSize="18sp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:gravity="center"
                       android:layout_height="wrap_content"
                       tools:text="Manchester United"/>
                   <TextView
                       android:id="@+id/tv_home_team_formation"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       tools:text="home formations"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:orientation="horizontal"
                   android:gravity="center">
                   <TextView
                       android:id="@+id/tv_home_team_score"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="4dp"
                       android:textStyle="bold"
                       android:textSize="36sp"
                       tools:text="5"/>
                   <TextView
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="4dp"
                       android:text="@string/vs"/>
                   <TextView
                       android:id="@+id/tv_away_team_score"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_margin="4dp"
                       android:textStyle="bold"
                       android:textSize="36sp"
                       tools:text="5"/>
               </LinearLayout>
               <LinearLayout
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="center"
                   android:orientation="vertical">
                   <ImageView
                       android:id="@+id/iv_away_team_icon"
                       android:layout_width="60dp"
                       android:layout_height="60dp"
                       tools:src="@drawable/ic_launcher_background"/>
                   <TextView
                       android:id="@+id/tv_away_team_name"
                       android:textSize="18sp"
                       android:textColor="@color/colorPrimary"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:gravity="center"
                       tools:text="Manchester United"/>
                   <TextView
                       android:id="@+id/tv_away_team_formation"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       tools:text="home formations"/>
               </LinearLayout>
           </LinearLayout>

           <View
               android:layout_width="match_parent"
               android:layout_height="1dp"
               android:layout_margin="4dp"
               android:background="@color/gray" />
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_goals"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_goals" />
               <TextView
                   android:id="@+id/tv_away_goals"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_shots"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_shots" />
               <TextView
                   android:id="@+id/tv_away_shots"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>

           <View
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_margin="4dp"
           android:background="@color/gray" />
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="24sp"
               android:text="@string/label_line_up"
               android:gravity="center"/>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_goal_keeper"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_goal_keeper" />
               <TextView
                   android:id="@+id/tv_away_goal_keeper"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_defense"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_defense" />
               <TextView
                   android:id="@+id/tv_away_defense"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_midfield"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_midfield" />
               <TextView
                   android:id="@+id/tv_away_midfield"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_foward"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_foward" />
               <TextView
                   android:id="@+id/tv_away_foward"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="8dp"
               android:layout_marginRight="16dp"
               android:layout_marginLeft="16dp">
               <TextView
                   android:id="@+id/tv_home_substitutes"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   tools:text="L. Messi"/>
               <TextView
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:textColor="@color/colorPrimary"
                   android:gravity="center"
                   android:textStyle="bold"
                   android:text="@string/label_substitutes" />
               <TextView
                   android:id="@+id/tv_away_substitutes"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"
                   android:gravity="end"
                   tools:text="C. Ronaldo"/>
           </LinearLayout>
       </LinearLayout>
    </ScrollView>
    <include layout="@layout/progress_bar"/>
</FrameLayout>